<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_margin">
        <EditText
            android:id="@+id/et_mail_signup"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/edit_text_margin"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:hint="@string/email_hint"/>
        <EditText
            android:id="@+id/et_password_signup"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_mail_signup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/edit_text_margin"
            android:textColor="@color/colorPrimaryText"
            android:inputType="textPassword"
            android:hint="@string/pass_hint"/>
        <TextView
            android:id="@+id/tv_error_signup"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_password_signup"
            android:textColor="#c00"
            android:visibility="invisible"
            android:maxLines="1"/>
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/edit_text_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_error_signup"
            android:text="@string/sign_up"/>

        <TextView
            android:id="@+id/gsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gsignin"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/et_mail_signup"
            app:layout_constraintRight_toRightOf="@id/et_mail_signup"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/gsign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/et_mail_signup"
            app:layout_constraintRight_toRightOf="@id/et_mail_signup"
            app:layout_constraintTop_toBottomOf="@id/gsign"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>