...

    <string name="API_KEY" translatable="false">YOUR_API_KEY_HERE</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="invalid_creds">Invalid Credentials. Please try again.</string>
    <string name="user_disabled">Your account is disabled. Contact support.</string>
    <string name="email_pass_req">Email and password are required fields</string>
    <string name="mail_invalid">Email is not valid.</string>
    <string name="pass_invalid">Password must be at least six characters long.</string>
    <string name="something_wrong">Something went wrong. Please try again.</string>
    <string name="gsignin">Log in with Google instead.</string>
...
